@@ -1,0 +1,58 @@
+<?php
+
+/**
+ * 2007-2016 PrestaShop
+ *
+ * NOTICE OF LICENSE
+ *
+ * This source file is subject to the Academic Free License (AFL 3.0)
+ * that is bundled with this package in the file LICENSE.txt.
+ * It is also available through the world-wide-web at this URL:
+ * http://opensource.org/licenses/afl-3.0.php
+ * If you did not receive a copy of the license and are unable to
+ * obtain it through the world-wide-web, please send an email
+ * to license@prestashop.com so we can send you a copy immediately.
+ *
+ * DISCLAIMER
+ *
+ * Do not edit or add to this file if you wish to upgrade PrestaShop to newer
+ * versions in the future. If you wish to customize PrestaShop for your
+ * needs please refer to http://www.prestashop.com for more information.
+ *
+ *  @author    Hennes Hervé <contact@h-hennes.fr>
+ *  @copyright 2013-2016 Hennes Hervé
+ *  @license   http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ *  http://www.h-hennes.fr/blog/
+ */
+namespace Hhennes\PrestashopConsole\Command\Install;
+
+use Symfony\Component\Console\Command\Command;
+use Symfony\Component\Console\Input\InputArgument;
+use Symfony\Component\Console\Input\InputInterface;
+use Symfony\Component\Console\Input\InputOption;
+use Symfony\Component\Console\Output\OutputInterface;
+use Symfony\Component\Console\Command\ListCommand;
+
+/**
+ * This commands display information on ps install
+ *
+ */
+class InfoCommand extends ListCommand
+{
+
+    protected function configure()
+    {
+        $this
+            ->setName('install:info')
+            ->setDescription('prestashop install info')
+            ->setDefinition($this->getNativeDefinition());
+    }
+
+    protected function execute(InputInterface $input, OutputInterface $output)
+    {
+        parent::execute($input,$output);
+        $output->writeln("<error>No prestashop installation detected, please install it or place the console in the right place.</error>");
+        $output->writeln("<error>Or run install:install to install a new prestashop website.</error>");
+        $output->writeln("<error>All console commands will be available once a prestashop installation will be detected</error>");
+    }
+}
