@@ -27,4 +27,5 @@
 2016-06- : New commands
 2016-09-17 - V 0.2.0 : New phar archive
 2016-09-22 - V 0.2.1 : Replace configuration file in yml by file in php to optimize phar generation
-2016-09-23 - V 0.2.2 : Cache management improvements, add media cache 
+2016-09-23 - V 0.2.2 : Cache management improvements, add media cache
+2016-10-10 - V 0.3.0 : New functionnaly : install prestashop from command line
